# Tupan

./: .gitignore  BOND_GRAPH_EDITOR_TUTORIAL.md  BUILD_BLOCKED_NPM_REGISTRY.md  BUILD_PROGRESS_SESSION3.md  BUILD_STATUS_SESSION2.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  Cargo.toml  FINAL_BUILD_SUMMARY_SESSION3.md  GITHUB_READY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NPM_REGISTRY_ISSUE_RESOLUTION.md  PHASE1_BUILD_STATUS.md  PHASE1_COMPLETION_STATUS.md  PHASE22_WEEK1_SUMMARY.md  PHASE25_TASK1_STATUS.md  PHASE2_STATUS.md  PHASE45_SUMMARY.md  PHASE_11_SESSION_1-2_COMPLETE.md  PHASE_11_SESSION_3-4_COMPLETE.md  PHASE_11_SESSION_5-6_COMPLETE.md  PHASE_11_SESSION_7-8_COMPLETE.md  PHASE_11_SESSION_9-10_COMPLETE.md  PHASE_17_FINAL_REPORT.md  PHASE_18_CAD_TESTS_SUMMARY.md  PHASE_20_COMPLETE.md  PHASE_20_TASK_3_SETUP.md  PHASE_2_TASK_8_COMPLETE.md  PHASE_49_COMPLETION.md  PHASE_50_TASK1_GYRATOR_COUPLING.md  PHASE_50_TASK2_NONLINEAR_ELEMENTS.md  PHASE_50_TASK3_MODULATED_TRANSFORMERS.md  PHASE_50_TASK4_ADVANCED_CAUSALITY_VISUALIZATION.md  PHASE_51_INTERACTIVE_CAUSALITY_DEBUGGER.md  PHASE_52_CAUSALITY_DRIVEN_SOLVER.md  PHASE_53_CANVAS_CAUSALITY_VISUALIZATION.md  PHASE_54_ADVANCED_CAUSALITY_OPTIMIZATION.md  PHASE_54_COMPREHENSIVE_TEST_SUITE_COMPLETE.md  PHASE_54_TEST_PLAN.md  (+19 more)
.claude/: settings.local.json
docs/: ADVANCED_ROUTING_PHASE13.md  ARCHITECTURE.md  CLAUDE_CONTEXT.md  CRITICAL_OPTIMIZATION_1_EXECUTOR_CLONING.md  CRITICAL_OPTIMIZATION_2_ROOT_LOCUS.md  CRITICAL_OPTIMIZATION_3_FREQUENCY_RESPONSE_CACHING.md  ELECTRICAL_SOLVER.md  (+48 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+2 files in other folders)
