[package]
name = "tupan"
version = "0.1.0"
description = "Tupan - Mechatronics Engineering Platform"
authors = ["Tupan Contributors"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
